pages/css-files/porte-index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style-type: none;
  text-decoration: none;
  color: black;
}

body {
  font-family: "Nunito", sans-serif;
  font-weight: 600;
  max-width: 100vw;
  overflow-x: hidden;
}

.container-box {
  width: 100%;
  height: auto;
}

.container-top-bar {
  display: flex;
  justify-content: center;
  width: 100%;
  background-color: rgb(236, 235, 235);
}

.top-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin: 5px;
  font-size: 15px;
}

.left-items {
  position: sticky;
  display: flex;
  align-items: center;
  gap: 15px;
}

.email {
  margin-left: 15px;
}

.email > a {
  text-decoration: none;
  color: black;
}

.email > a:hover {
  color: red;
}

.right-items {
  display: flex;
  align-items: center;
  gap: 15px;
}

.items-menu {
  display: flex;
  align-items: center;
  margin-right: 50px;
  margin-bottom: 0px;
  padding-left: 0px;
  gap: 30px;
}

.items-menu > li > a {
  text-decoration: none;
  color: black;
}

.items-menu > li > a:hover {
  color: red;
}

.dropdown > a {
  background-color: rgb(236, 235, 235);
  border: none;
  color: black;
}

.dropdown > a:hover {
  background-color: rgb(236, 235, 235);
  color: black;
  border: none;
}

.dropdown-products > a {
  background-color: transparent;
  border: none;
  color: black;
  font-weight: 500;
}

.dropdown-products > a:hover {
  background-color: transparent;
  border: none;
  color: red;
}

.container-header {
  position: relative;
  background-color: whitesmoke;
  padding: 20px 0 20px 0;
  width: 100%;
  z-index: 1;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.menu-list {
  display: flex;
  align-items: center;
  margin-right: 50px;
  margin-bottom: 0px;
  gap: 30px;
  font-size: 17px;
  font-weight: 500;
}

.menu-list > a,
li,
span {
  color: black;
  text-decoration: none;
  z-index: 1;
}

.menu-list > a:hover {
  color: red;
}

.title {
  display: flex;
  justify-content: center;
  margin: 80px 0;
}

.porte-interne,
.porte-blindate,
.porte-tagliafuoco {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.cards-porte-interne,
.cards-porte-tagliafuoco {
  display: flex;
  justify-content: space-between;
  gap: 70px;
  width: 85vw;
  overflow-y: hidden;
}

.cards-porte-blindate {
  display: flex;
  justify-content: space-between;
  width: 50vw;
  overflow-y: hidden;
}

.carousel-item > a > img {
  transition: transform 0.3s ease;
}

.carousel-item > a > img:hover {
  transform: scale(1.1);
}

.img-text {
  position: absolute;
  margin-left: -40px;
  margin-bottom: -40px;
}

.img-text h6 {
  display: flex;
  font-size: 18px;
}

.img-text p {
  display: flex;
  text-align: start;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.cards-porte-interne {
  display: flex;
  justify-content: space-between;
  gap: 70px;
  width: 85vw;
  overflow: hidden;
  scroll-behavior: smooth;
  position: relative;
}

.carousel-item {
  position: relative;
}

.carousel-caption.img-text {
  position: absolute;
  bottom: 50px;
  left: 40px;
  width: 90%;
  color: white;
  padding: 10px;
}

.carousel-control-prev,
.carousel-control-next {
  background-color: rgba(0, 0, 0, 0.5);
  color: black;
  border: none;
  font-size: 24px;
  cursor: pointer;
  padding: 10px;
  margin-top: 370px;
}

.carousel-controls {
}

